[package]

name = "calculator"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"

[[bin]]
name = "calculator"

[build-dependencies]
capnpc = { path = "../capnproto-rust/capnpc" }

[dependencies]
capnp = { path = "../capnproto-rust/capnp" }
capnp-rpc = { path = "../capnproto-rust/capnp-rpc" }
futures = "0.1"
tokio = "0.1"
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
